--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <title>Impact - О Модпаке</title>
 
     <link
-      href="https://fonts.googleapis.com/css?family=Oswald:300,500,600|Roboto:400,700"
+      href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700"
       rel="stylesheet"
     />
     <!--
@@ -37,36 +37,30 @@
   </head>
 
   <body>
-  		<!-- Start Preloader Area -->
-	<div class="preloader-area">
-		<div class="loader-box">
-			<div class="loader"></div>
-		</div>
-	</div>
-	<!-- End Preloader Area -->
 	<!-- Start Header Area -->
 	<header id="header">
+		<div class="header-inner">
 		<div class="container main-menu">
 			<div class="row align-items-center d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+					<a href="index"><img src="img/logo.png" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
-						<li><a href="index.html">Главная</a></li>
-						<li><a class="active" href="about.html">О модпаке</a></li>
-						<li><a href="download.html">Скачать</a></li>
-						<li class="menu-has-children"><a href="#">Wiki</a>
+						<li><a href="index">Главная</a></li>
+						<li><a class="active" href="about">О модпаке</a></li>
+						<li><a href="download">Скачать</a></li>
+						<li class="menu-has-children"><a href="">Wiki</a>
 							<ul>
-								<li><a>GregTech и аддоны (скоро) </a></li>
-								<li><a>Другие моды (скоро) </a></li>
+								<li><a data-tooltip="В разработке">GregTech и аддоны</a></li>
+								<li><a data-tooltip="В разработке">Другие моды</a></li>
 							</ul>
-						<li></li>
-						<li></li>
+						</li>
 					</ul>
 				</nav>
 			</div>
 		</div>
+	</div>
 	</header>
 	<!-- End Header Area -->
 
@@ -101,9 +95,15 @@
 							Главное преимущество этой сборки - модификация каждого мода под реалии GregTech. Именно тут данный мод интегрируется в каждую эпоху, начиная с базовых машин, заканчивая межпространственными путешествиями.
 						</p>
 					</div>
-					<a href="download.html" class="primary-btn" data-text="Скачать">
+					<a href="download" class="primary-btn" style="margin-right: 2px;  padding: 0 25px;" data-text="Скачать">
 						<span>Скачать</span>
 					</a>
+					<a href="https://discord.gg/bMf2qvd" class="primary-btn" style="margin-right: 2px;  padding: 0 25px;" data-text="Discord">
+						<span>Discord</span>
+					</a>
+					<a href="https://github.com/GT-IMPACT" class="primary-btn" style="margin-right: 2px;  padding: 0 25px;" data-text="GitHub">
+						<span>GitHub</span>
+					</a>			
 				</div>
 			</div>
 		</div>
@@ -117,7 +117,8 @@
 				<div class="col-lg-12">
 					<div class="section-title text-center">
 						<h2 class="p-black">MODS</h2>
-						<h3>КАКИЕ МОДЫ СТОЯТ В МОДПАКЕ?</h3>
+						<h4>Какие моды стоят в модпаке?</h4></br>
+						<h4>Внимание! Большинство рецептов в сборке изменены</h3>
 					</div>
 				</div>
 			</div>
