--- a/index.html
+++ b/index.html
@@ -46,63 +46,26 @@
 		<div class="container main-menu">
 			<div class="row align-items-center d-flex">
 				<div id="logo">
-					<a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+					<a href="index"><img src="img/logo.png" alt="" title="" /></a>
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
-						<li class=""><a class="active" href="index.html">Главная</a></li>
-						<li><a href="about.html">О модпаке</a></li>
-						<li><a href="download.html">Скачать</a></li>
-						<li class="menu-has-children"><a href="#">Wiki</a>
+						<li class=""><a class="active" href="index">Главная</a></li>
+						<li><a href="about">О модпаке</a></li>
+						<li><a href="download">Скачать</a></li>
+						<li class="menu-has-children"><a href="">Wiki</a>
 							<ul>
-								<li><a>GregTech и аддоны (скоро) </a></li>
-								<li><a>Другие моды (скоро) </a></li>
+								<li><a data-tooltip="В разработке">GregTech и аддоны</a></li>
+								<li><a data-tooltip="В разработке">Другие моды</a></li>
 							</ul>
 						</li>
-						<li> </li>
-						<li> </li>
 					</ul>
 				</nav>
 			</div>
 		</div>
 	</div>
 	</header>
-
-	<!-- End Header Area -->
-
-	<!-- start banner Area  -->
-	<!--<section class="home-banner-area">
-		<div class="container">
-			<div class="row fullscreen d-flex align-items-center">
-				<div class="banner-content col-lg-4 col-md-8 justify-content-center ">
-					<h1 class="wow fadeIn" data-wow-duration="1s" data-wow-delay=".6s">Impact</h1>
-						<div class="designation mb-25 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-							<p class="p-white">Индустриально-технологическая сборка Minecraft на версии 1.7.10 с модифицированным Gregtech 5.09 и другими модами</p>
-							<div class="social-icons">
-								<ul> 
-									<li><a href="https://discord.gg/bMf2qvd"><i class="ti-discord"></i>Discord</a></li>
-									<li><a href="https://github.com/GT-IMPACT"><i class="ti-github"></i>GitHub</a></li>
-									<li><a href=""><i class=""></i> </a></li>
-								</ul>
-							</div>
-						</div>
-					<a href="about.html" class="primary-btn-home" data-text="Подробнее">
-						<span>П</span>
-						<span>о</span>
-						<span>д</span>
-						<span>р</span>
-						<span>о</span>
-						<span>б</span>
-						<span>н</span>
-						<span>е</span>
-						<span>е</span>
-					</a>
-				</div>
-			</div>
-		</div>
-	</section> -->
-
-		<section id="slider" class="slider" style="background-image:url('img/banner-img.png')">
+		<section id="slider" class="slider" style="background: url('img/banner-img.png'); min-height: 90vh; background-size:cover;">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-7 col-sm-12 col-xs-12">
@@ -111,25 +74,12 @@
 							<p>Индустриально-технологическая сборка Minecraft на версии 1.7.10 </br> с модифицированным Gregtech 5.09 и другими модами</p>
 							<div class="button">
 				
-								<a href="about.html" class="primary-btn-home" data-text="Подробнее">
-									<span>П</span>
-									<span>о</span>
-									<span>д</span>
-									<span>р</span>
-									<span>о</span>
-									<span>б</span>
-									<span>н</span>
-									<span>е</span>
-									<span>е</span>
+								<a href="about" class="primary-btn-home" data-text="Подробнее">
+									<span>Подробнее</span>
 								</a>
-								<a href="download.html" class="primary-btn-home" data-text="Скачать">
-									<span>С</span>
-									<span>К</span>
-									<span>а</span>
-									<span>ч</span>
-									<span>а</span>
-									<span>т</span>
-									<span>ь</span>
+								<a href="download" class="primary-btn-home" data-text="Скачать">
+									<span>Скачать</span>
+
 								</a>
 							</div>
 							<div class="social-icons">
