--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 					</div>
 					<div class="mb-35 wow fadeIn" data-wow-duration=".8s" data-wow-delay=".3s">
 						<p>
-							Глобальный индустриальный модпак для Minecraft 1.7.10, основанный на GregTech 5 и различных, глубоко интгрированных друг с другом модов. Такой интеграции в Minecraft с модами еще не было.
+							Глобальный индустриальный модпак для Minecraft 1.7.10, основанный на GregTech 5 и различных, глубоко интегрированных друг с другом модов. Такой интеграции в Minecraft с модами еще не было.
 						</p><p>
 							Главное преимущество этой сборки - модификация каждого мода под реалии GregTech. Именно тут данный мод интегрируется в каждую эпоху, начиная с базовых машин, заканчивая межпространственными путешествиями.
 						</p>
