--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 <head>
 	<!-- Mobile Specific Meta -->
+	<meta
+	name="viewport"
+	content="user-scalable=no"
+  />
 	<!-- Favicon-->
 	<link rel="shortcut icon" href="img/fav.png">
 	<!-- Author Meta -->
@@ -55,7 +59,7 @@
 						<li><a href="download">Скачать</a></li>
 						<li class="menu-has-children"><a href="">Wiki</a>
 							<ul>
-								<li><a data-tooltip="В разработке">GregTech и аддоны</a></li>
+								<li><a href="wiki/gt-addons">GregTech и аддоны</a></li>
 								<li><a data-tooltip="В разработке">Другие моды</a></li>
 							</ul>
 						</li>
