Clean img and add PWP wiki

--- a/download.html
+++ b/download.html
@@ -5,7 +5,7 @@
     <meta
       name="viewport"
 	  content="user-scalable=no"
-    />
+	/>
     <!-- Favicon-->
     <link rel="shortcut icon" href="img/fav.png" />
     <!-- Author Meta -->
@@ -15,7 +15,10 @@
     <!-- Meta Keyword -->
     <meta name="keywords" content="" />
     <!-- meta character set -->
-    <meta charset="UTF-8" />
+	<meta charset="UTF-8" />
+	<meta property="og:type" content="website" />
+	<meta property="og:description" content="Обновление IMPACT"/>W
+	<meta name="title" content="IMPACT 1.0rc2" />
     <!-- Site Title -->
     <title>Impact - Скачать</title>
 
