--- a/wiki/gt-addons.html
+++ b/wiki/gt-addons.html
@@ -101,6 +101,18 @@
 					<div class="col-lg-6 col-md-6">
 						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
 							<div class="d-flex align-items-center mb-3">
+								<h4>Primitive Water Pump</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/primwaterpump.png" alt="">
+							<p>Примитивная водокачка</p></br></br>
+							<a href="primwaterpump" class="primary-btn" data-text="Изучить">
+								<span>Изучить</span>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
 								<h4>Saw Mill</h4>
 							</div>
 							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/sawmill.png" alt="">
