--- a/wiki/primwaterpump.html
+++ b/wiki/primwaterpump.html
@@ -17,7 +17,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8" />
     <!-- Site Title -->
-    <title>Impact Wiki - SawMill</title>
+    <title>Impact Wiki - Primitive Water Pump</title>
 
     <link
       href="https://fonts.googleapis.com/css?family=Play:300,400,500,600,700"
