--- a/download.html
+++ b/download.html
@@ -17,7 +17,7 @@
     <!-- meta character set -->
 	<meta charset="UTF-8" />
 	<meta property="og:type" content="website" />
-	<meta property="og:description" content="Обновление IMPACT"/>W
+	<meta property="og:description" content="Обновление IMPACT"/>
 	<meta name="title" content="IMPACT 1.0rc2" />
     <!-- Site Title -->
     <title>Impact - Скачать</title>
