--- a/download.html
+++ b/download.html
@@ -237,13 +237,44 @@
 					<div class="align-items-center justify-content-center text-center">
 					</br>
 						Скачать предыдущие версии: <a href="https://drive.google.com/drive/folders/1ELUpwTLi2JbzshQvqE4p-sszpAhIBnDj?usp=sharing" target="_blank">перейти</a>
+					</br>
+						Скачать ядро для сервера: <a href="https://drive.google.com/u/0/uc?export=download&confirm=VRK7&id=1YCrY9hgAmK3O0LmOvUR13lfpZCM9rk_j" target="_blank" data-tooltip="Неофициальная, но оптимизированая версия">Thermos</a> | 
+						 <a href="https://drive.google.com/u/0/uc?export=download&confirm=1ofC&id=1M49OrrRo219pejomX1MX5zSnxyRX6aH8" target="_blank" data-tooltip="Официальная версия">Ultramine</a> | 
+						 <a href="https://drive.google.com/u/0/uc?export=download&confirm=RAIn&id=1rZGY0JroJDg71DmDoNbXnXnaAtbgE7vq" target="_blank" data-tooltip="Неофициальная, но оптимизированая версия командой ZonaSumraka.ru">Ultramine (Patched)</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 	<!-- End About Area -->
+<style>
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
 
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+ 
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+</style>
 	<!-- Start Service Area -->
 	<section class="service-area section-gap-top">
 		<div class="container">
