add desc Overclock for sm

--- a/wiki/sawmill.html
+++ b/wiki/sawmill.html
@@ -156,7 +156,7 @@
 							Для постройки этого мультиблока вам понадобятся 2 типа блоков: Saw Mill Conveyor и Wooden Casing.</br>
 							<hr>
 							Люки обслуживания (устанавливаются в любом месте вместо Wooden Casing):
-							<li>Energy hatch: 1x</li>
+							<li>Energy hatch: 1x (Overclock - ускорение машины происходит только с MV  тира)</li>
 							<li>Output Bus: до 1x </li>
 							<li>Input Hatches: до 1x</li>
 							<li>Input Bus: 1x</li>
