add pyrolyse ovens wiki

--- a/wiki/gt-addons.html
+++ b/wiki/gt-addons.html
@@ -129,8 +129,20 @@
 							</div>
 							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/purolyse.png" alt="">
 							<p>Пиролизная печь</p></br></br>
-							<a href="#" class="primary-btn" data-text="Изучить">
-								<span>Скоро</span>
+							<a href="pyrolyse" class="primary-btn" data-text="Изучить">
+								<span>Изучить</span>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
+								<h4>Advanced Pyrolyse Oven</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/AdvPyrolyse.png" alt="">
+							<p>Продвинутая Пиролизная печь</p></br></br>
+							<a href="advpyrolyse" class="primary-btn" data-text="Изучить">
+								<span>Изучить</span>
 							</a>
 						</div>
 					</div>
