--- a/wiki/sawmill.html
+++ b/wiki/sawmill.html
@@ -90,7 +90,7 @@
 						<div id="bg-left"></div>
 						<div id="bg-right"></div>
 						<div id="content-left">
-							Лесопилка - это многоблочная машина, добавленная модификикацией Impact Core.</br>
+							Лесопилка - это многоблочная машина, добавленная модификацией Impact Core.</br>
 							<hr>
 							Предназначена для обработки древесины, так как все остальные механики обработки дерева отключены (кроме ручного инструмента), вам понадобится эта машина для 	игрового процессинга.
 		
