--- a/wiki/advpyrolyse.html
+++ b/wiki/advpyrolyse.html
@@ -99,7 +99,7 @@
 						</div>
 						<div id="content-right">
 		
-							<img class="img-fluid" src="../img/wiki/Advpyrolyse.png"> 
+							<img class="img-fluid" src="../img/wiki/AdvPyrolyse.png"> 
 							<p>Advanced Pyrolyse Oven в собранной форме</p>
 							
 						</div>
