Rebalance advanced pyrolyse again

--- a/wiki/advpyrolyse.html
+++ b/wiki/advpyrolyse.html
@@ -127,14 +127,14 @@
 							
 							<br>
 							<p style="font-weight: bold; margin-bottom: -5px">Важно!</p>
-							Машина в зависимости от тира Energy Hatch выполняет за раз несколько рецептов (LV - 1x, MV - 2x, HV - 3x и тд.)
+							Машина в зависимости от тира Energy Hatch выполняет за раз несколько рецептов (LV - 2x, MV - 4x, HV - 6x .. Тир * 2)
 							<br><br>
 							<p style="font-weight: bold; margin-bottom: -5px">Расход энергии:</p>
-							EU/t = EU/t (по рецепту) * количество одновременных рецептов
+							EU/t = EU/t (по рецепту) * количество одновременных рецептов * тир Energy Hatch / 2
 							<br><br>
 							Пример:<br>
-							Тир Energy Hatch - MV = 2<br>
-							EU/t = 20 * 2 = 40 EU/t - при условии что можно выполнить 2 рецепта за раз, если рецепт запустить 1 за раз, то будет 20 EU/t<br>
+							Тир Energy Hatch - MV = 2, значит максимальная параллельность = 2 * 2 = 4<br>
+							EU/t = 20 * 4 * 2 / 2 = 80 EU/t - при условии что можно выполнить 4 рецепта за раз, если рецепт запустить 1 за раз, то будет 20 EU/t<br>
 
 						</div>
 						<div id="content-right">
