add water calc and elwater

--- a/wiki/gt-addons.html
+++ b/wiki/gt-addons.html
@@ -146,9 +146,21 @@
 							</a>
 						</div>
 					</div>
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
+								<h4>Electric Water Drilling Rig</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/ElWater.png" alt="">
+							<p>Электрическая буровая водокачка</p></br></br>
+							<a href="waterdrill" class="primary-btn" data-text="Изучить">
+								<span>Изучить</span>
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
-
+			
 			<div id="Mechanics" class="tabcontent-wiki">
 				<div class="row">
 					
