--- a/wiki/waterdrill.html
+++ b/wiki/waterdrill.html
@@ -117,7 +117,7 @@
 							
 							<p style="font-weight: bold; margin-bottom: -5px">Коэффициент генерации воды:</p><br>
 							Коэффициент генерации воды - h.
-							Коэффициент изменяется с помощью тира Energy Hatch и Output Hatch.
+							Коэффициент изменяется с помощью тира Energy Hatch и Output Hatch.<br>
 
 							<br><p style="font-weight: bold; margin-bottom: -5px">Биомный коэффициент:</p><br>
 							Биомный коэффициент - b.
