add Steam and Gas Large Turbines

--- a/wiki/gt-addons.html
+++ b/wiki/gt-addons.html
@@ -87,7 +87,8 @@
 						<h4 class="p-black">Данная wiki написана при поддержке игроков и разработчиков IMPACT</h3><br>
 
 						<div class="tab-wiki">
-						  <button class="tablinks" onclick="openCity(event, 'Multis')" id="defaultOpen">Мультиблоки</button>
+						  	<button class="tablinks" onclick="openCity(event, 'IMPACT')" id="defaultOpen">IMPACT</button>
+						  	<button class="tablinks" onclick="openCity(event, 'GREGTECH')" id="">GREGTECH</button>
 						</div>
 
 					</div>
@@ -96,7 +97,7 @@
 			
 			
 
-			<div id="Multis" class="tabcontent-wiki">
+			<div id="IMPACT" class="tabcontent-wiki">
 				<div class="row">
 					<div class="col-lg-6 col-md-6">
 						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
@@ -161,9 +162,56 @@
 				</div>
 			</div>
 			
-			<div id="Mechanics" class="tabcontent-wiki">
+			<div id="GREGTECH" class="tabcontent-wiki">
 				<div class="row">
-					
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
+								<h4>Large Steam Turbine</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/SteamLargeTrubine.png" alt="">
+							<p>Большая паровая турбина</p></br></br>
+							<a href="LargeSteamTurbine" class="primary-btn" data-text="Изучить">
+								<span>Изучить</span>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
+								<h4>Large Gas Turbine</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/GasLargeTrubine.png" alt="">
+							<p>Большая газовая турбина</p></br></br>
+							<a href="LargeGasTurbine" class="primary-btn" data-text="Изучить">
+								<span>Изучить</span>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
+								<h4>Large HP Steam Turbine</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/SteamHPLargeTrubine.png" alt="">
+							<p>Большая паровая турбина высокого давления</p></br></br>
+							<a href="" class="primary-btn" data-text="Изучить">
+								<span>Скоро</span>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
+								<h4>Large Plasma Turbine</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/PlasmaLargeTrubine.png" alt="">
+							<p>Большая плазменная турбина</p></br></br>
+							<a href="" class="primary-btn" data-text="Изучить">
+								<span>Скоро</span>
+							</a>
+						</div>
+					</div>
 				</div>
 			</div>
 
