--- a/wiki/cokeoven.html
+++ b/wiki/cokeoven.html
@@ -135,9 +135,9 @@
 						<div id="content-left">
 							Для постройки этого мультиблока вам понадобится блок Coke Oven Brick.</br>
 							<hr>
-							Primitive Output Hatch x1
-							Primitive Output Bus x1
-							Primitive Input Bus x1
+							<li>Primitive Output Hatch x1</li>
+							<li>Primitive Output Bus x1</li>
+							<li>Primitive Input Bus x1</li><br>
 							Люки обслуживания имеют такие же текстуры как и Coke Oven Brick.<br>
 							Остальные люки обслуживания не требуются.<br>
 
