--- a/wiki/cokeoven.html
+++ b/wiki/cokeoven.html
@@ -92,7 +92,7 @@
 						<div id="content-left">
 							Коксовая печь - это многоблочная машина, добавленная модификацией Impact Core.</br>
 							<hr>
-							Предназначена для производство древесного и коксового угля и креозота на начальных этапах.
+							Предназначена для производство древесного/коксового угля и креозота на начальных этапах.
 		
 							
 							
