upd future wiki

--- a/wiki/gt-addons.html
+++ b/wiki/gt-addons.html
@@ -153,6 +153,19 @@
 					<div class="col-lg-6 col-md-6">
 						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
 							<div class="d-flex align-items-center mb-3">
+								<h4>Industrial Pulverizer</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/IndustrialPulverizer.png" alt="">
+							<p>Индустриальный пульверайзер</p></br></br>
+							<a href="#" class="primary-btn" data-text="Изучить">
+								<span>Скоро</span>
+							</a>
+						</div>
+					</div>
+					
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
 								<h4>Advanced Pyrolyse Oven</h4>
 							</div>
 							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/AdvPyrolyse.png" alt="">
@@ -179,6 +192,43 @@
 			
 			<div id="GREGTECH" class="tabcontent-wiki">
 				<div class="row">
+
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
+								<h4>Primitive Blast Furnace</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/PrimBlastFurnace.gif" alt="">
+							<p>Примитивная Доменная печь</p></br></br>
+							<a href="#" class="primary-btn" data-text="Изучить">
+								<span>Скоро</span>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
+								<h4>Electric Blast Furnace</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/EBF.png" alt="">
+							<p>Электрическая доменная печь</p></br></br>
+							<a href="#" class="primary-btn" data-text="Изучить">
+								<span>Скоро</span>
+							</a>
+						</div>
+					</div>
+					<div class="col-lg-6 col-md-6">
+						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
+								<h4>Large Steam Boiler</h4>
+							</div>
+							<img style="float: right; margin-top: -40px;" width="150" height="150" class="img-fluid" src="../img/wiki/LargeBoilers.gif" alt="">
+							<p>Большой паровой бойлер</p></br></br>
+							<a href="#" class="primary-btn" data-text="Изучить">
+								<span>Скоро</span>
+							</a>
+						</div>
+					</div>
 					<div class="col-lg-6 col-md-6">
 						<div class="single-service wow fadeInUp" style="height: 250px;" data-wow-duration="1s" data-wow-delay="0.0s">
 							<div class="d-flex align-items-center mb-3">
