--- a/download.html
+++ b/download.html
@@ -204,8 +204,8 @@
       <div class="container">
         <div class="row d-flex align-items-center justify-content-center">
           <div class="about-content col-lg-12">
-            <h1 class="text-white">Скачать IMPACT</h1>
-            <p>Актуальная версия: 1.0-RC2</p>
+            <h1 class="text-white">Modpack IMPACT</h1>
+            <p>Актуальная версия / Latest version: 1.0.0.0</p>
           </div>
         </div>
       </div>
@@ -218,27 +218,28 @@
 			<div class="row d-flex align-items-center justify-content-center">
 				<div class="">
 					<div class="section-title">
-						<h2 class="text-center"><p class="p-black">Клиент | Сервер</p></h2>
+						<h2 class="text-center"><p class="p-black">CLIENT | SERVER</p></h2>
 					</div>
 					<div class="text-center" class="mb-35 wow fadeIn" data-wow-duration=".8s" data-wow-delay=".3s">
-						<p>Скачать актуальную версию</p>
+						<p>Скачать актуальную версию / Download latest version</p>
 						<div class="">
-						<p style="color: #000; font-weight:bold;">Перед скачиванием прочтите <a class="popup-open" href="#">список изменений</a></p>
+						<p style="color: #000; font-weight:bold;">Перед скачиванием прочтите <a target="_blank" href="https://docs.google.com/document/d/1LebeDWaoNbqKscqCMzSA5WocuJ_RaUruF5jBYZPbKP0/edit?usp=sharing">список изменений</a></p>
+						<p style="color: #000; font-weight:bold;">Please read <a target="_blank" href="https://docs.google.com/document/d/11W_P3M57shuGuRf_Uo6H90ND308NkukpL20iVnFwoHA/edit?usp=sharing">changelog</a> before download</p>
 						</div>
 					<div class="align-items-center justify-content-center text-center">
-					<a href="https://drive.google.com/uc?id=1wh4WiBtqcoltMD0pzPNvdhDFkUUU0dX9&export=download" class="primary-btn" data-text="CLIENT" target="_blank">
+					<a href="https://drive.google.com/uc?id=1BMQoi1hTUeHkgVIDmnhOKzGRpIgneXfn&export=download" class="primary-btn" data-text="CLIENT" target="_blank">
 						<span>CLIENT</span>
 					</a>
 					
-					<a href="https://drive.google.com/uc?id=1Pujg7OjGG5nSCtXeozLO1MYi14ry-279&export=download" class="primary-btn" data-text="SERVER" target="_blank">
+					<a href="https://drive.google.com/uc?id=1y0UORd2i7BRPx8TOZ63vY7t2A3QmBsQU&export=download" class="primary-btn" data-text="SERVER" target="_blank">
 						<span>SERVER</span>
 					</a>
 					</div>
 					<div class="align-items-center justify-content-center text-center">
 					</br>
-						Скачать предыдущие версии: <a href="https://drive.google.com/drive/folders/1ELUpwTLi2JbzshQvqE4p-sszpAhIBnDj?usp=sharing" target="_blank">перейти</a>
+						Предыдущие версии / Previous versions: <a href="https://drive.google.com/drive/folders/1ELUpwTLi2JbzshQvqE4p-sszpAhIBnDj?usp=sharing" target="_blank">click</a>
 					</br>
-						Скачать ядро для сервера: <a href="https://drive.google.com/u/0/uc?export=download&confirm=VRK7&id=1YCrY9hgAmK3O0LmOvUR13lfpZCM9rk_j" target="_blank" data-tooltip="Неофициальная, но оптимизированая версия">Thermos</a> | 
+						Ядро для сервера / Server core: <a href="https://drive.google.com/u/0/uc?export=download&confirm=VRK7&id=1YCrY9hgAmK3O0LmOvUR13lfpZCM9rk_j" target="_blank" data-tooltip="Неофициальная, но оптимизированая версия">Thermos</a> | 
 						 <a href="https://drive.google.com/u/0/uc?export=download&confirm=1ofC&id=1M49OrrRo219pejomX1MX5zSnxyRX6aH8" target="_blank" data-tooltip="Официальная версия">Ultramine</a> | 
 						 <a href="https://drive.google.com/u/0/uc?export=download&confirm=RAIn&id=1rZGY0JroJDg71DmDoNbXnXnaAtbgE7vq" target="_blank" data-tooltip="Неофициальная, но оптимизированая версия командой ZonaSumraka.ru">Ultramine (Patched)</a>
 					</div>
